--- a/circle.yml
+++ b/circle.yml
@@ -7,5 +7,11 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Installing dependencies
+          name: Installing server dependencies
           command: npm install
+      - run:
+          name: Installing client dependencies
+          command: npm run client:dependencies
+      - run:
+          name: Running client tests
+          command: npm run client:test
