--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,9 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/hydropi
     docker:
       - image: node:7.10
+    working_directory: ~/hydropi
     steps:
       - checkout
       - run:
@@ -15,3 +15,24 @@ jobs:
       - run:
           name: Running client tests
           command: npm run client:test
+  deploy:
+    docker:
+      - image: ubuntu:14.04
+    working_directory: ~/hydropi
+    steps:
+      - run:
+          name : Deploy to Resin.io
+          command: |
+            git remote add resin $RESIN_REMOTE
+            git push resin master
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            -build
+          filters:
+            branches:
+              only: master
