Try adding directly resin remote

--- a/circle.yml
+++ b/circle.yml
@@ -23,7 +23,7 @@ jobs:
       - run:
           name : Deploy to Resin.io
           command: |
-            git remote add resin $RESIN_REMOTE
+            git remote add resin gh_francois_roseberry@git.resin.io:gh_francois_roseberry/hydropi.git
             git push resin master
 workflows:
   version: 2
