Rename Circle cache

--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ jobs:
           name: Running client tests
           command: npm run client:test
       - save_cache:
-          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - ~/hydropi
   deploy:
@@ -25,7 +25,7 @@ jobs:
     working_directory: ~/hydropi
     steps:
       - restore_cache:
-          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name : Deploy to Resin.io
           command: |
