--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.2.0",
     "react-intl": "^2.4.0",
     "react-scripts": "1.0.17",
-    "react-toggle-button": "^2.2.0"
+    "react-toggle-button": "^2.2.0",
+    "recharts": "^1.0.0-beta.7"
   },
   "scripts": {
     "start": "react-scripts start",
