--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "enzyme": "^2.9.1",
+    "eslint-plugin-react": "^7.5.1",
     "react-test-renderer": "^16.2.0"
   }
 }
