--- a/client/package.json
+++ b/client/package.json
@@ -13,17 +13,24 @@
     "react-scripts": "1.0.17",
     "react-toggle-button": "^2.2.0",
     "recharts": "^1.0.0-beta.7",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"node fakeServer.js\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "enzyme": "^2.9.1",
+    "concurrently": "^3.5.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint-plugin-react": "^7.5.1",
-    "react-test-renderer": "^16.2.0"
-  }
+    "express": "^4.16.2",
+    "http": "0.0.0",
+    "react-test-renderer": "^16.2.0",
+    "socket.io": "^2.0.4"
+  },
+  "proxy": "http://localhost:3001"
 }
