Use the real server in dev instead of a fake one

--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "socket.io-client": "^2.0.4"
   },
   "scripts": {
-    "start": "concurrently \"node fakeServer.js\" \"react-scripts start\"",
+    "start": "concurrently \"node ../server.js\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
