--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "homepage": "https://github.com/francois-roseberry/hydropi#readme",
   "dependencies": {
     "cross-env": "^5.1.3",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "http": "0.0.0",
+    "socket.io": "^2.0.4"
   }
 }
