--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-toggle-button": "^2.2.0",
     "recharts": "^1.0.0-beta.7",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.4"
   },
   "scripts": {
