--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
+    "react-toggle": "^4.0.2",
     "react-toggle-button": "^2.2.0",
     "recharts": "^1.0.0-beta.7",
     "redux": "^3.7.2",
