--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,9 @@
     "eslint-plugin-react": "^7.5.1",
     "express": "^4.16.2",
     "http": "0.0.0",
+    "mock-socket": "^7.1.0",
     "react-test-renderer": "^16.2.0",
+    "redux-mock-store": "^1.4.0",
     "socket.io": "^2.0.4"
   },
   "proxy": "http://localhost:3001"
