--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -15,11 +15,13 @@ WORKDIR /usr/src/app
 
 # Copies the package.json first for better cache on later pushes
 COPY package.json package.json
+COPY server/package.json server/package.json
 COPY client/package.json client/package.json
 
 # This install npm dependencies on the resin.io build server,
 # making sure to clean up the artifacts it creates in order to reduce the image size.
 RUN JOBS=MAX npm install --production --unsafe-perm && npm cache clean && rm -rf /tmp/*
+RUN JOBS=max npm install --prefix ./server --production --unsafe-perm ./server && npm cache clean && rm -rf /tmp/*
 RUN JOBS=max npm install --prefix ./client --production --unsafe-perm ./client && npm cache clean && rm -rf /tmp/*
 
 # This will copy all files in our root to the working  directory in the container
