--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -21,8 +21,11 @@ COPY client/package.json client/package.json
 # This install npm dependencies on the resin.io build server,
 # making sure to clean up the artifacts it creates in order to reduce the image size.
 RUN JOBS=MAX npm install --production --unsafe-perm && npm cache clean && rm -rf /tmp/*
-RUN JOBS=max npm install --prefix ./server --production --unsafe-perm ./server && npm cache clean && rm -rf /tmp/*
-RUN JOBS=max npm install --prefix ./client --production --unsafe-perm ./client && npm cache clean && rm -rf /tmp/*
+RUN JOBS=MAX npm install --prefix ./server --production --unsafe-perm ./server && npm cache clean && rm -rf /tmp/*
+RUN JOBS=MAX npm install --prefix ./client --production --unsafe-perm ./client && npm cache clean && rm -rf /tmp/*
+
+# Install the pi-pins dependency
+RUN JOBS=MAX npm install --prefix ./server pi-pins  && npm cache clean && rm -rf /tmp/*
 
 # This will copy all files in our root to the working  directory in the container
 COPY . ./
