Reorder commands in CircleCI conf

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -10,6 +10,9 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:6-slim
 #    alsa-utils libasound2-dev && \
 #    apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# Install node-gyp dependencies (Python, GCC and Make)
+RUN apk add --no-cache python build-base # build base includes g++ and gcc and Make
+
 # Defines our working directory in container
 WORKDIR /usr/src/app
 
