--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: node:7.10
+      - image: node:6.9.1-alpine
     working_directory: ~/hydropi
     steps:
       - checkout
