--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ jobs:
           key: client-deps-{{ .Branch }}-{{ checksum "client/package.json"}}
       - run:
           name: Install node-gyp dependencies (Python, GCC and Make)
-          command: apt-get install python build-base # build base includes g++ and gcc and Make
+          command: apt-get install python make gcc # build base includes g++ and gcc and Make
       - run:
           name: Installing common dependencies
           command: npm install
