Switch resin image back to standard linux

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,11 +2,16 @@
 # see more about dockerfile templates here: http://docs.resin.io/deployment/docker-templates/
 # and about resin base images here: http://docs.resin.io/runtime/resin-base-images/
 # Note the node:slim image doesn't have node-gyp
-FROM resin/%%RESIN_MACHINE_NAME%%-alpine-node:6-slim
+FROM resin/%%RESIN_MACHINE_NAME%%-node:6-slim
+
+# use apt-get if you need to install dependencies,
+# for instance if you need ALSA sound utils, just uncomment the lines below.
+#RUN apt-get update && apt-get install -yq \
+#    alsa-utils libasound2-dev && \
+#    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install node-gyp dependencies (Python, GCC and Make)
-# apk is Linux Alpine. NO ap-get
-RUN apk add --no-cache python build-base # build base includes g++ and gcc and Make
+RUN apt-get install python gcc make
 
 # Defines our working directory in container
 WORKDIR /usr/src/app
