--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,7 +2,7 @@
 # see more about dockerfile templates here: http://docs.resin.io/deployment/docker-templates/
 # and about resin base images here: http://docs.resin.io/runtime/resin-base-images/
 # Note the node:slim image doesn't have node-gyp
-FROM resin/%%RESIN_MACHINE_NAME%%-node:6-slim
+FROM resin/%%RESIN_MACHINE_NAME%%-node:7.10
 
 # use apt-get if you need to install dependencies,
 # for instance if you need ALSA sound utils, just uncomment the lines below.
@@ -11,7 +11,7 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:6-slim
 #    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install node-gyp dependencies (Python, GCC and Make)
-RUN apt-get install python gcc make
+RUN apt-get update && apt-get install -y python gcc make
 
 # Defines our working directory in container
 WORKDIR /usr/src/app
