--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -10,8 +10,8 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:7.10
 #    alsa-utils libasound2-dev && \
 #    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Install node-gyp dependencies (Python, GCC and Make)
-RUN apt-get update && apt-get install -y python gcc make
+# Install node-gyp dependencies (Python) - (GCC and Make are already included in the standard image)
+RUN apt-get update && apt-get install -y python
 
 # Defines our working directory in container
 WORKDIR /usr/src/app
