--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "mocha": "^5.0.0",
     "socket.io-client": "^2.0.4"
   }
