--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "hydroponics controller web app",
   "main": "index.js",
   "scripts": {
-    "start": "node ./main.js",
+    "start": "modprobe w1-gpio && modprobe w1-therm && node index.js",
     "test": "mocha --exit"
   },
   "repository": {
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/francois-roseberry/hydropi#readme",
   "dependencies": {
+    "ds18x20": "^0.2.0",
     "express": "^4.16.2",
     "http": "0.0.0",
     "pi-pins": "^1.0.2",
