--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,7 @@
     "express": "4.16.2",
     "http": "0.0.0",
     "moment": "2.24.0",
-    "node-cron": "2.0.3",
+    "node-schedule": "^1.3.2",
     "pi-pins": "1.0.2",
     "socket.io": "2.0.4"
   },
