--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
   },
   "homepage": "https://github.com/francois-roseberry/hydropi#readme",
   "dependencies": {
-    "cross-env": "^5.1.3"
+    "cross-env": "6.0.3"
   }
 }
