--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,7 +2,7 @@
 # see more about dockerfile templates here: http://docs.resin.io/deployment/docker-templates/
 # and about resin base images here: http://docs.resin.io/runtime/resin-base-images/
 # Note the node:slim image doesn't have node-gyp
-FROM resin/%%RESIN_MACHINE_NAME%%-node:6
+FROM balenalib/%%BALENA_MACHINE_NAME%%-node:6
 
 # use apt-get if you need to install dependencies,
 # for instance if you need ALSA sound utils, just uncomment the lines below.
@@ -10,8 +10,8 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:6
 #    alsa-utils libasound2-dev && \
 #    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Install node-gyp dependencies (Python) - (GCC and Make are already included in the standard image)
-RUN apt-get update && apt-get install -y python
+# Install node-gyp dependencies (Python, G++ and Make)
+RUN apt-get update && apt-get install -y python make g++
 
 # Defines our working directory in container
 WORKDIR /usr/src/app
@@ -33,8 +33,11 @@ COPY . ./
 # Build the client App
 RUN JOBS=MAX npm run client:build
 
-# Enable systemd init system in container
-ENV INITSYSTEM on
+# This was done in the old resin images, not sure if needs to be done anymore : Enable systemd init system in container
+# ENV INITSYSTEM on
+
+# Enable udevd so that plugged dynamic hardware devices show up in our container.
+ENV UDEV=1
 
 # server.js will run when container starts up on the device
 CMD ["npm", "start"]
