--- a/circle.yml
+++ b/circle.yml
@@ -45,7 +45,7 @@ jobs:
           fingerprints:
             - "62:99:7c:02:c8:94:3a:c1:1d:30:8f:25:ba:ae:95:8a"
       - run:
-          name : Deploy to Resin.io
+          name : Deploy to Balena.io
           command: |
             cat resinkey >> ~/.ssh/known_hosts
             git remote add resin gh_francois_roseberry@git.resin.io:gh_francois_roseberry/hydropi.git
