--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ jobs:
           key: client-deps-{{ .Branch }}-{{ checksum "client/package.json"}}
       - run:
           name: Install node-gyp dependencies (Python, GCC and Make)
-          command: apt-get install python make gcc # build base includes g++ and gcc and Make
+          command: apt-get install python make gcc
       - run:
           name: Installing common dependencies
           command: npm install
@@ -36,7 +36,7 @@ jobs:
             - ~/hydropi
   deploy:
     docker:
-      - image: circleci/node:8.10
+      - image: node:8.10
     working_directory: ~/hydropi
     steps:
       - restore_cache:
@@ -44,6 +44,12 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "62:99:7c:02:c8:94:3a:c1:1d:30:8f:25:ba:ae:95:8a"
+      - run:
+          name: Install node-gyp dependencies (Python, GCC and Make)
+          command: apt-get install python make gcc
+      - run:
+          name : Install Balena CLI
+          command: npm install balena-cli -g --production --unsafe-perm
       - run:
           name : Deploy to Balena.io
           command: |
