--- a/circle.yml
+++ b/circle.yml
@@ -54,8 +54,10 @@ jobs:
           name : Deploy to Balena.io
           command: |
             cat resinkey >> ~/.ssh/known_hosts
-            git remote add resin gh_francois_roseberry@git.resin.io:gh_francois_roseberry/hydropi.git
-            git push resin master
+            balena login --token  "oDR9VLoeL8Gxi3oI4uryfZZ04sIqC3S7"
+            balena push hydropi
+            #git remote add resin gh_francois_roseberry@git.resin.io:gh_francois_roseberry/hydropi.git
+            #git push resin master
 workflows:
   version: 2
   build-deploy:
