--- a/circle.yml
+++ b/circle.yml
@@ -34,6 +34,36 @@ jobs:
           key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - ~/hydropi
+
+  build_arm:
+    docker:
+      - image: node:8.10
+    working_directory: ~/hydropi
+    steps:
+      - setup_remote_docker
+      # use a primary image that already has Docker (recommended)
+      # or install it during a build like here
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+      - run:
+          name: Install node-gyp dependencies (Python, GCC and Make)
+          command: apt-get install python make gcc
+      - run:
+          name : Install Balena CLI
+          command: npm install balena-cli -g --production --unsafe-perm
+      - run:
+          name: Build with Balena
+          command: |
+            balena login --token $BALENA_API_TOKEN
+            HOST=$(echo $DOCKER_HOST | awk -F'tcp://|:[0-9]+' '{print $0=$2}')
+            DEBUG=1 balena build --logs --emulated --dockerHost $HOST --dockerPort 2376 --application Hydropi
+
   deploy:
     docker:
       - image: node:8.10
@@ -45,18 +75,20 @@ jobs:
           name: Install node-gyp dependencies (Python, GCC and Make)
           command: apt-get install python make gcc
       - run:
-          name : Install Balena CLI
+          name: Install Balena CLI
           command: npm install balena-cli -g --production --unsafe-perm
       - run:
-          name : Deploy to Balena.io
+          name: Deploy to Balena.io
           command: |
             balena login --token $BALENA_API_TOKEN # Env variable stored in CircleCI
             balena push hydropi
+
 workflows:
   version: 2
   build-deploy:
     jobs:
       - build
+      - build_arm
       - deploy:
           requires:
             - build
