--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "recharts": "1.0.0-beta.7",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
-    "socket.io-client": "2.1.1"
+    "socket.io-client": "2.1.1",
+    "eslint-plugin-react": "7.5.1"
   },
   "scripts": {
     "start": "concurrently \"node ../server/index.js\" \"react-scripts start\"",
@@ -28,7 +29,6 @@
     "concurrently": "5.0.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
-    "eslint-plugin-react": "7.5.1",
     "express": "4.16.2",
     "http": "0.0.0",
     "mock-socket": "7.1.0",
